# sigrok_monorepo

./: .bazelrc  .gitignore  BUILD  Dockerfile  MODULE.bazel  README.md  bazel-bin  bazel-out  bazel-pulseview  bazel-testlogs  build.sh  confuse.BUILD  docker.sh  ftdi_version_i.h  glibmm.BUILD  install.sh  libftdi.BUILD  libsigcplusplus.BUILD  pull.sh
libserialport/: BUILD  config.h
libsigrok/: BUILD  README  config.h  configure.ac
libsigrok/bindings/cxx/: enums.py
libsigrok/bindings/cxx/include/libsigrokcxx/: enums.hpp
libsigrok/bindings/python/sigrok/core/: classes.i
libsigrok/bindings/swig/: doc.py
libsigrok/include/libsigrok/: version.h
libsigrok/src/: version.c
libsigrokdecode/: BUILD  config.h  libsigrokdecode.h  version.h
pulseview/: BUILD  CMakeLists.txt  main.cpp  sigc++config.h
pulseview/android/: loghandler.cpp
pulseview/pv/: application.cpp  globalsettings.cpp  globalsettings.hpp  logging.cpp  mainwindow.cpp  session.cpp
pulseview/pv/binding/: decoder.cpp
pulseview/pv/data/: decodesignal.hpp
pulseview/pv/data/decode/: annotation.cpp  decoder.cpp  row.cpp  rowdata.hpp
pulseview/pv/dialogs/: settings.cpp
pulseview/pv/subwindows/: subwindowbase.cpp
pulseview/pv/subwindows/decoder_selector/: model.cpp  subwindow.cpp
pulseview/pv/toolbars/: mainbar.cpp  mainbar.hpp
pulseview/pv/views/: viewbase.cpp
pulseview/pv/views/decoder_binary/: view.cpp
pulseview/pv/views/tabular_decoder/: view.cpp
pulseview/pv/views/trace/: decodetrace.cpp  view.cpp
pulseview/pv/widgets/: decodermenu.cpp
pulseview/test/data/: decoderstack.cpp
sigrok-cli/: BUILD  config.h  sigrok-cli.h
